--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
             <h1 id="drinkName"></h1>
             <img href="" id="drinkPic"></img>
             <div id="instructions"></div>
-            <div id="ingredients"></div>
+            <div>
+                <ul id="ingredients">
+                    <li id="ingredient1"></li>
+                    <li id="ingredient2"></li>
+                    <li id="ingredient3"></li>
+                    <li id="ingredient4"></li>
+                    <li id="ingredient5"></li>
+                    <li id="ingredient6"></li>
+                    <li id="ingredient7"></li>
+                    <li id="ingredient8"></li>
+                    <li id="ingredient9"></li>
+                    <li id="ingredient10"></li>
+                    <li id="ingredient11"></li>
+                    <li id="ingredient12"></li>
+                    <li id="ingredient13"></li>
+                    <li id="ingredient14"></li>
+                    <li id="ingredient15"></li>
+                </ul>
+            </div>
             <section>
                 <div>
 
