adding js for the local storage

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
     </header>
 
     <main>
-        <form>
-            <input type="text" placeholder="What drink are you looking for?" id="product" autocomplete="off" />
-            <button type="submit" id="search"><i class="fa fa-search"></i></button>
-        </form>
+
+        <aside class="">
+            <h2>Search for an ingredient:</h2>
+            <form>
+                <input type="text" placeholder="What drink are you looking for?" id="product" autocomplete="off" />
+                <button type="submit" id="search"><i class="fa fa-search"></i></button>
+            </form>
+            <hr>
+            <div id="drinkHistory"></div>
+        </aside>
 
         <section id="results">
             <h1 id="drinkName"></h1>
