addiing multiple drinks to search

--- a/index.html
+++ b/index.html
@@ -33,9 +33,40 @@
             <div id="instructions"></div>
             <div id="ingredients"></div>
             <section>
-                <div>
+                <section id="drink1">
+                    <h1 id="drinkName1"></h1>
+                    <img href="" id="drinkPic1"></img>
+                    <div id="instructions1"></div>
+                    <div id="ingredients1"></div>
+                </section>
 
-                </div>
+                <section id="drink2">
+                    <h1 id="drinkName2"></h1>
+                    <img href="" id="drinkPic2"></img>
+                    <div id="instructions2"></div>
+                    <div id="ingredients2"></div>
+                </section>
+
+                <section id="drink3">
+                    <h1 id="drinkName3"></h1>
+                    <img href="" id="drinkPic3"></img>
+                    <div id="instructions3"></div>
+                    <div id="ingredients3"></div>
+                </section>
+
+                <section id="drink4">
+                    <h1 id="drinkName4"></h1>
+                    <img href="" id="drinkPic4"></img>
+                    <div id="instructions4"></div>
+                    <div id="ingredients4"></div>
+                </section>
+
+                <section id="drink5">
+                    <h1 id="drinkName5"></h1>
+                    <img href="" id="drinkPic5"></img>
+                    <div id="instructions5"></div>
+                    <div id="ingredients5"></div>
+                </section>
             </section>
         </section>
     </main>
