--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">"
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>Document</title>
 </head>
@@ -22,6 +23,7 @@
             <form>
                 <input type="text" placeholder="What drink are you looking for?" id="product" autocomplete="off" />
                 <button type="submit" id="search"><i class="fa fa-search"></i></button>
+                <button type="submit" id="clear">Clear History</button>
             </form>
             <hr>
             <div id="drinkHistory"></div>
