--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <header>
 
     </header>
-
     <main>
-<<<<<<< HEAD
         <!-- Bulma columns container -->
         <section class="columns">
             <!-- First page column for search -->
@@ -31,36 +29,14 @@
                     <input type="text" placeholder="What's YOUR buzz?" id="product" autocomplete="off" />
                     <button type="submit" id="search"><i class="fa fa-search"></i></button>
                 </form>
+                <!-- Draws a line -->
                 <hr>
                 <div class="histContainer">
                     <div id="drinkHistory"></div>
-=======
-
-        <aside class="left">
-            <h2>Search for an ingredient:</h2>
-            <form>
-                <input type="text" placeholder="What's YOUR buzz?" id="product" autocomplete="off" />
-                <button type="submit" id="search"><i class="fa fa-search"></i></button>
-                <button type="submit" id="clear">Clear History</button>
-            </form>
-            <hr>
-            <div class="histContainer">
-                <div id="drinkHistory"></div>
-            </div>
-        </aside>
-        <br>
-        <div class="right">
-            <section id="results">
-                <div class="">
-                    <h1 id="drinkName"></h1>
-                    <img href="" id="drinkPic"></img>
-                    <div id="instructions"></div>
-                    <div id="ingredients"></div>
->>>>>>> 9b4a3dee72cfa623938a13cca2ec34d6e528db04
                 </div>
             </aside>
             <!-- Second column for drinks -->
-            <div class="column is-half">
+            <div class="column is-three-quarters">
                 <section id="results">
                     <div class="">
                         <h1 id="drinkName"></h1>
