added clear history button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <form>
                     <input type="text" placeholder="What's YOUR buzz?" id="product" autocomplete="off" />
                     <button type="submit" id="search"><i class="fa fa-search"></i></button>
+                    <button type="submit" id="clear">Clear History</button>
                 </form>
                 <!-- Draws a line -->
                 <hr>
