--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
                 </form>
                 <!-- Draws a line -->
                 <hr>
+                <!-- Container for search history buttons -->
                 <div class="histContainer">
                     <div id="drinkHistory"></div>
                 </div>
             </aside>
             <!-- Second column for drinks -->
-            <div class="column is-three-quarters">
+            <div class="column is-three-quarters" id="column2">
                 <section id="results">
-                    <div class="">
+                    <div class="card">
                         <h1 id="drinkName"></h1>
                         <img href="" id="drinkPic"></img>
                         <div id="instructions"></div>
@@ -47,47 +48,52 @@
                     </div>
                     <br>
                     <section>
-                        <div class="card1">
+                        <div class="card">
                             <section id="drink1">
                                 <h1 id="drinkName1"></h1>
                                 <img href="" id="drinkPic1"></img>
                                 <div id="instructions1"></div>
+                                <br>
                                 <div id="ingredients1"></div>
                             </section>
                         </div>
                         <br>
-                        <div class="card2">
+                        <div class="card">
                             <section id="drink2">
                                 <h1 id="drinkName2"></h1>
                                 <img href="" id="drinkPic2"></img>
                                 <div id="instructions2"></div>
+                                <br>
                                 <div id="ingredients2"></div>
                             </section>
                         </div>
                         <br>
-                        <div class="card3">
+                        <div class="card">
                             <section id="drink3">
                                 <h1 id="drinkName3"></h1>
                                 <img href="" id="drinkPic3"></img>
                                 <div id="instructions3"></div>
+                                <br>
                                 <div id="ingredients3"></div>
                             </section>
                         </div>
                         <br>
-                        <div class="card4">
+                        <div class="card">
                             <section id="drink4">
                                 <h1 id="drinkName4"></h1>
                                 <img href="" id="drinkPic4"></img>
                                 <div id="instructions4"></div>
+                                <br>
                                 <div id="ingredients4"></div>
                             </section>
                         </div>
                         <br>
-                        <div class="card5">
+                        <div class="card">
                             <section id="drink5">
                                 <h1 id="drinkName5"></h1>
                                 <img href="" id="drinkPic5"></img>
                                 <div id="instructions5"></div>
+                                <br>
                                 <div id="ingredients5"></div>
                             </section>
                         </div>
