--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                     <button type="submit" id="search"><i class="fa fa-search"></i></button>
                     <button type="submit" id="clear">Clear History</button>
                 </form>
-                <!-- Draws a line -->
-                <hr>
+                <hr> <!-- Draws a line -->
                 <!-- Container for search history buttons -->
                 <div class="histContainer">
                     <div id="drinkHistory"></div>
@@ -44,10 +43,11 @@
                         <h1 id="drinkName"></h1>
                         <img href="" id="drinkPic"></img>
                         <div id="instructions"></div>
+                        <br>
                         <div id="ingredients"></div>
                     </div>
                     <br>
-                    <section>
+                    <section id="results">
                         <div class="card">
                             <section id="drink1">
                                 <h1 id="drinkName1"></h1>
