added a result2 id

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     <button type="submit" id="search"><i class="fa fa-search"></i></button>
                     <button type="submit" id="clear">Clear History</button>
                 </form>
-                <hr> <!-- Draws a line -->
+                <hr>
+                <!-- Draws a line -->
                 <!-- Container for search history buttons -->
                 <div class="histContainer">
                     <div id="drinkHistory"></div>
@@ -47,7 +48,7 @@
                         <div id="ingredients"></div>
                     </div>
                     <br>
-                    <section id="results">
+                    <section id="results2">
                         <div class="card">
                             <section id="drink1">
                                 <h1 id="drinkName1"></h1>
