Updated index.html added new column for alignment

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 <body>
     <header>
-
+        Anonymous Alcoholics
     </header>
     <main>
         <!-- Bulma columns container -->
         <section class="columns">
             <!-- First page column for search -->
-            <aside class="column is-one-quarter">
+            <aside class="column is-one-third">
                 <h2>Search for an ingredient:</h2>
                 <form>
                     <input type="text" placeholder="What's YOUR buzz?" id="product" autocomplete="off" />
@@ -37,10 +37,11 @@
                     <div id="drinkHistory"></div>
                 </div>
             </aside>
+            <div class="column is-one-fifth is-centered middle"></div>
             <!-- Second column for drinks -->
-            <div class="column is-three-quarters" id="column2">
+            <div class="column is-three-fifths" id="column2">
                 <section id="results">
-                    <div class="card">
+                    <div class="card flex">
                         <h1 id="drinkName"></h1>
                         <img href="" id="drinkPic"></img>
                         <div id="instructions"></div>
