Updated index.html comments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <!-- Bulma columns container -->
         <section class="columns">
-            <!-- First page column for search -->
+            <!-- First column for search & drinkHistory -->
             <aside class="column is-one-third">
                 <h2>Search for an ingredient:</h2>
                 <form>
@@ -38,7 +38,7 @@
                 </div>
             </aside>
             <div class="column is-one-fifth is-centered middle"></div>
-            <!-- Second column for drinks -->
+            <!-- Third column contains drinks -->
             <div class="column is-three-fifths" id="column2">
                 <section id="results">
                     <div class="card flex">
