Update index.html aside width and clear btn width

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <!-- Bulma columns container -->
         <section class="columns">
             <!-- First column for search & drinkHistory -->
-            <aside class="column is-one-third">
+            <aside class="column is-one-fourth">
                 <h2>Search for an ingredient:</h2>
                 <form>
                     <input type="text" placeholder="What's YOUR buzz?" id="product" autocomplete="off" />
                     <button type="submit" id="search"><i class="fa fa-search"></i></button>
-                    <button type="submit" id="clear">Clear History</button>
+                    <button type="submit" id="clear">Clear</button>
                 </form>
                 <hr>
                 <!-- Draws a line -->
