Updated index.html added icon to h2

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <section class="columns">
             <!-- First column for search & drinkHistory -->
             <aside class="column is-one-third">
-                <h2 id="intro">Search for an ingredient:</h2>
+                <h2 id="intro">🥃Search for an ingredient:</h2>
                 <form>
-                    <input type="text" placeholder="What's YOUR buzz?" id="product" autocomplete="off" />
+                    <input type="text" placeholder="Pick your poison" id="product" autocomplete="off" />
                     <button type="submit" id="search"><i class="fa fa-search"></i></button>
                     <button type="submit" id="clear">Clear</button>
                 </form>
