Update index.html span classes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
     <header>
-        <span id="anon">Anonymous </span><span id="alc">Alcoholics</span>
+        <span id="anon">Anonymous </span>
+        <span id="alc">Alcoholics </span>
+        <span id="mobile">Mobile</span>
     </header>
     <main>
         <!-- Bulma columns container -->
