fizing local stoage button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Voltaire&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
-    <title>Document</title>
+    <title>Anonymous Alcoholics</title>
 </head>
 
 <body>
