Updated index.html added is-mobile class to columns

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 
 <body>
     <header>
+        <!-- On desktop and tablet we are Anonymous Alcoholics -->
         <span id="anon">Anonymous </span>
         <span id="alc">Alcoholics </span>
+        <!-- On mobile view we are Alcoholics Mobile -->
         <span id="mobile">Mobile</span>
     </header>
     <main>
         <!-- Bulma columns container -->
-        <section class="columns">
+        <section class="columns is-mobile">
             <!-- First column for search & drinkHistory -->
             <aside class="column is-one-third">
                 <h2 id="intro">🥃Search for an ingredient:</h2>
