--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <!-- Bulma columns container -->
-        <section class="columns is-mobile">
+        <section class="columns">
             <!-- First column for search & drinkHistory -->
             <aside class="column is-one-third">
                 <h2 id="intro">🥃Search for an ingredient:</h2>
