--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </header>
     <main>
         <!-- Bulma columns container -->
-        <section class="columns is-mobile">
+        <section class="columns">
             <!-- First column for search & drinkHistory -->
             <aside class="column is-one-third">
                 <h2 id="intro">🥃Search for an ingredient:</h2>
-                <form>
+                <form id="searchForm">
                     <input type="text" placeholder="Pick your poison" id="product" autocomplete="off" />
                     <button type="submit" id="search"><i class="fa fa-search"></i></button>
                     <button type="submit" id="clear">Clear</button>
