Updated index.html added button container

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <h2 id="intro">🥃Search for an ingredient:</h2>
                 <form id="searchForm">
                     <input type="text" placeholder="Pick your poison" id="product" autocomplete="off" />
-                    <button type="submit" id="search"><i class="fa fa-search"></i></button>
-                    <button type="submit" id="clear">Clear</button>
+                    <div class="btn-container">
+                        <button type="submit" id="search"><i class="fa fa-search"></i></button>
+                        <button type="submit" id="clear">Clear</button>
+                    </div>
                 </form>
                 <hr>
                 <!-- Draws a line -->
