--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             </div>
         </section>
     </main>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="./Assets/JS/script.js"></script>
 </body>
 
